--- a/profile_2.html
+++ b/profile_2.html
@@ -131,7 +131,9 @@
 								<div class="ad-is-data">
 									15.03.16
 								</div>
-								<img src="img/content/news-img.jpg" alt="">
+								<div class="ad-is-img">
+									<img src="img/content/news-img.jpg" alt="">
+								</div>
 								<a class="ad-is-name" href="#">
 									Лучшая покупка для дома
 									Лучшая покупка для дома
