--- a/profile_2.html
+++ b/profile_2.html
@@ -101,10 +101,10 @@
 							
 						<div class="profile-msg-top">
 							<ul class="msg-status">
-								<li class="is-active"><a href="#">Активные (2)</a></li>
-								<li><a href="#">Неактивные (1)</a></li>
-								<li><a href="#">Ожидающие (2)</a></li>
-								<li><a href="#">Удаленные (2)</a></li>
+								<li class="is-active"><a ad-in="ad-one" href="#">Активные (2)</a></li>
+								<li><a ad-in="ad-two" href="#">Неактивные (1)</a></li>
+								<li><a ad-in="ad-three"  href="#">Ожидающие (2)</a></li>
+								<li><a ad-in="ad-four"  href="#">Удаленные (2)</a></li>
 							</ul>
 							<form action="#" class="search-msg">
 								<fieldset>
@@ -126,7 +126,91 @@
 								<li>№ объявления</li>
 								<li>Цена</li>
 							</ul>
-						<div class="ad-is">
+						<div class="ad-is" id="ad-one">
+							<div class="ad-is-block">
+								<div class="ad-is-data">
+									15.03.16
+								</div>
+								<div class="ad-is-img">
+									<img src="img/content/news-img.jpg" alt="">
+								</div>
+								<a class="ad-is-name" href="#">
+									Лучшая покупка для дома
+									Лучшая покупка для дома
+								</a>
+								<a href="#" class="ad-is-edit">Редактировать</a> 
+								<a href="#" class="ad-is-edit del-edit">Удалить</a>
+								<span class="ad-is-numb"> 4</span>
+								<span>15 500 грн.</span>
+							</div>
+						</div>
+						<div class="ad-is" id="ad-two">
+							<div class="ad-is-block">
+								<div class="ad-is-data">
+									15.03.16
+								</div>
+								<div class="ad-is-img">
+									<img src="img/content/news-img.jpg" alt="">
+								</div>
+								<a class="ad-is-name" href="#">
+									Лучшая покупка для дома
+									Лучшая покупка для дома
+								</a>
+								<a href="#" class="ad-is-edit">Редактировать</a> 
+								<a href="#" class="ad-is-edit del-edit">Удалить</a>
+								<span class="ad-is-numb"> 4</span>
+								<span>15 500 грн.</span>
+							</div>
+							<div class="ad-is-block">
+								<div class="ad-is-data">
+									15.03.16
+								</div>
+								<div class="ad-is-img">
+									<img src="img/content/news-img.jpg" alt="">
+								</div>
+								<a class="ad-is-name" href="#">
+									Лучшая покупка для дома
+									Лучшая покупка для дома
+								</a>
+								<a href="#" class="ad-is-edit">Редактировать</a> 
+								<a href="#" class="ad-is-edit del-edit">Удалить</a>
+								<span class="ad-is-numb"> 4</span>
+								<span>15 500 грн.</span>
+							</div>
+						</div>
+						<div class="ad-is" id="ad-three">
+							<div class="ad-is-block">
+								<div class="ad-is-data">
+									15.03.16
+								</div>
+								<div class="ad-is-img">
+									<img src="img/content/news-img.jpg" alt="">
+								</div>
+								<a class="ad-is-name" href="#">
+									Лучшая покупка для дома
+									Лучшая покупка для дома
+								</a>
+								<a href="#" class="ad-is-edit">Редактировать</a> 
+								<a href="#" class="ad-is-edit del-edit">Удалить</a>
+								<span class="ad-is-numb"> 4</span>
+								<span>15 500 грн.</span>
+							</div>
+							<div class="ad-is-block">
+								<div class="ad-is-data">
+									15.03.16
+								</div>
+								<div class="ad-is-img">
+									<img src="img/content/news-img.jpg" alt="">
+								</div>
+								<a class="ad-is-name" href="#">
+									Лучшая покупка для дома
+									Лучшая покупка для дома
+								</a>
+								<a href="#" class="ad-is-edit">Редактировать</a> 
+								<a href="#" class="ad-is-edit del-edit">Удалить</a>
+								<span class="ad-is-numb"> 4</span>
+								<span>15 500 грн.</span>
+							</div>
 							<div class="ad-is-block">
 								<div class="ad-is-data">
 									15.03.16
