--- a/my orders.html
+++ b/my orders.html
@@ -90,14 +90,14 @@
 				<div class="profile-tabs">
 					<ul>
 						<li><a href="#profile-2">заказы</a></li>
-						<li><a href="#profile-1" >история</a></li>
+						<li><a href="#profile-1">история</a></li>
 					</ul>
 					<!-- begin profile-advert -->
 					<div id="profile-2" class="profile-msg is-empty">
 						<div class="profile-msg-top">
 							<ul class="msg-status">
-								<li class="is-active"><a href="#"  ad-in="ad-one">активные (1234)</a></li>
-								<li><a href="#" ad-in="ad-two">Отложенные (1233)</a></li>
+								<li class="is-active"><a href="#ad-one">активные (1234)</a></li>
+								<li><a href="#ad-two">Отложенные (1233)</a></li>
 							</ul>
 							<form action="#" class="search-msg">
 								<fieldset>
