--- a/profile_2.html
+++ b/profile_2.html
@@ -101,10 +101,10 @@
 							
 						<div class="profile-msg-top">
 							<ul class="msg-status">
-								<li class="is-active"><a ad-in="ad-one" href="#">Активные (2)</a></li>
-								<li><a ad-in="ad-two" href="#">Неактивные (1)</a></li>
-								<li><a ad-in="ad-three"  href="#">Ожидающие (2)</a></li>
-								<li><a ad-in="ad-four"  href="#">Удаленные (2)</a></li>
+								<li class="is-active"><a href="#ad-one">Активные (2)</a></li>
+								<li><a href="#ad-two">Неактивные (1)</a></li>
+								<li><a href="#ad-three">Ожидающие (2)</a></li>
+								<li><a href="#ad-four">Удаленные (2)</a></li>
 							</ul>
 							<form action="#" class="search-msg">
 								<fieldset>
