--- a/my orders.html
+++ b/my orders.html
@@ -93,7 +93,7 @@
 						<li><a href="#profile-1">история</a></li>
 					</ul>
 					<!-- begin profile-advert -->
-					<div id="profile-2" class="profile-msg is-empty">
+					<div id="profile-2" class="profile-msg is-empty profile-tables">
 						<div class="profile-msg-top">
 							<ul class="msg-status">
 								<li class="is-active"><a href="#ad-one">активные (1234)</a></li>
