--- a/profile_2.html
+++ b/profile_2.html
@@ -97,10 +97,10 @@
 						<li><a href="#profile-6">Доставка</a></li>
 					</ul>
 					<!-- begin profile-advert -->
-					<div id="profile-1" class="profile-advert is-empty">
+					<div id="profile-1" class="profile-advert is-empty profile-tables">
 							
 						<div class="profile-msg-top">
-							<ul class="msg-status">
+							<ul class="msg-status ">
 								<li class="is-active"><a href="#ad-one">Активные (2)</a></li>
 								<li><a href="#ad-two">Неактивные (1)</a></li>
 								<li><a href="#ad-three">Ожидающие (2)</a></li>
